--- a/index.html
+++ b/index.html
@@ -138,19 +138,6 @@
             border-bottom-width: 2px;
         }
 
-        #how-to-play-btn, #back-to-start-btn {
-            background-color: var(--bg-light);
-            border-bottom-color: #3e5368;
-        }
-        #how-to-play-btn:hover, #back-to-start-btn:hover {
-            background-color: #5f7a95;
-            transform: translateY(-2px);
-        }
-        #how-to-play-btn:active, #back-to-start-btn:active {
-            transform: translateY(2px);
-            border-bottom-width: 2px;
-        }
-
         .how-to-play-content {
             max-width: 600px;
             text-align: left;
@@ -414,7 +401,7 @@
             animation: time-warning-flash-anim 0.6s infinite alternate;
         }
     </style>
-    <script src="/game.js?v=1.6" defer></script>
+    <script src="./game.js?v=1.7" defer></script>
 </head>
 <body>
 
